--- a/docs/Matchmaking_Server.tex
+++ b/docs/Matchmaking_Server.tex
@@ -264,16 +264,16 @@ This class has same members as the GameQueue superclass, albeit, with its own un
 The DeathmatchGameQueue::push function has a single parameter of type std::shared\textunderscore ptr\textlangle User\textrangle \& aptly named user.
 This is what is being requested to be added to the queue.
 First, it will see if the user has already been added to the queue by checking if the user ID is in the user map.
-If it is not, it is inserted in the user map with a count of 1 and increment the queue size.
-If it is in the queue, but its count is less than 0 meaning its been erased from the queue but not yet popped off, then it will set its count to 1 and increment the queue size.
+If it is not, it is inserted in the user map with a count of 1 and the queue size is incremented.
+If it is in the queue, but its count is less than 0, meaning its been erased from the queue but not yet popped off, then it will set its count to 1 and increment the queue size.
 If it is already in the queue and its count is greater than 1 then it will only increment its count. 
 After checking its count, the user is added to the queue.
-Finally, if with this added users queue size made it large enough to start a game and a game is already not getting prepared it will call DeathmatchGameQueue::prepare\textunderscore game.
+Finally, if this added user made the queue large enough to start a game and a game is already not getting prepared it will call DeathmatchGameQueue::prepare\textunderscore game.
 
 The DeathmatchGameQueue::pop function is a little more complicated than I initially hoped.
 This is due to the unforeseen complexity of having duplicates in the queue and the potential of having a user whose connection is closed in the queue.
 When the pop function is called, it will first check if the current queue size is less than or equal to 0.
-If it is, it will return a default weak\textunderscore ptr that points at nothing, so pretty much just null.
+If it is, it will return a default weak\textunderscore ptr that points at nothing, so just null.
 Then, if queue size is greater than 0, it will keep trying to get a user off the queue until it find a user that still has an active connection.
 If no such user is found it will return weak\textunderscore ptr\textlangle User\textrangle ().
 Now, once a user is found, it will check if the user is duplicated in the queue.
@@ -295,7 +295,7 @@ The DeathmatchGameQueue::star\textunderscore game function is used as a callback
 It has a single parameter for a JoinPacket.
 First, the packet is encoded, which serializes the packet to get ready to be sent over the wire to the user.
 Then, the it will enter in a while loop that will continue as long as a maximum amount of users have been added or the queue is empty.
-Next, inside this loop a user is popped of this queue, the current game size is incremented, and the join\textunderscore callback on the user is called with the JoinPacket object passed as an argument.
+Next, inside this loop a user is popped off this queue, the current game size is incremented, and the join\textunderscore callback on the user is called with the JoinPacket object passed as an argument.
 Finally, the preparing game flag is set to false.
 
 Now that wraps up the implementation and design of the game queue.
@@ -313,24 +313,24 @@ One such instance would be if a private game is being created where only select 
 This join callback could provide additional authentication statements to verify a user can join a game before making a failed attempt and the TCPConnection closing thinking the user found a game.
 
 \section{The Video Game}
-In this section I will give an the implementation details of the video game itself, the client-side mathcmaking, and how I will implement the in game peer-to-peer communication in the future.
+In this section I will give the implementation details of the video game itself, the client-side matchmaking, and provide the design for the in game peer-to-peer communication.
 \subsection{Gameplay}
 The video game that the matchmaking system will support is a simple 3D first-person sword fighting game.
 It was created using the Unity game engine and programmed in C\#.
 Note in the previous sections I used  client and user interchangeably, as those are both common terms to describe the person asking for a service or interacting with a service in the networking field.
-In the video game development field it more appropriate to describe this person as a player.
-There are a few different inputs a player can do to interact with the environment and other players.
+In the video game development field it is more appropriate to describe this person as a player.
+There are a few different inputs a player perform to interact with the environment and other players.
 You can move your player character in the game by using the arrows keys or WASD and use the mouse to look around or change your direction while moving.
 You can also attack/swing the sword by clicking the left mouse button.
 
 The way the player moves is by applying a force on the Rigidbody component attached the the player GameObject.
-The Rigidbody component  is something built into Unity that allows for adding physical force  to an object rather easy, as opposed to building an entire pysichs system yourself.
-In my game, force it applies is based on the input and speed of the character.
+The Rigidbody component is something built into Unity that allows for adding physical force to an object rather easy, as opposed to building an entire psychics system yourself.
+In the game, force is applies based on the input and speed of the character.
 The direction the player wants to move is given by the arrows keys.
-This is restricted to be in the x and z axis, as the y axis corresponds to the character floating up or down.
-This direction vector is then normalized to be a unit vector and multiplied by the character’s speed and Time.delataTime (e.g., direction * speed * Time.deltaTime). \cite{b2}
+This is restricted to be in the x and z axis only, as the y axis corresponds to the character floating up or down.
+This direction vector is then normalized to be a unit vector and multiplied by the character’s speed and Time.delataTime (e.g., direction * speed * Time.deltaTime).
 The speed is a scalar value, not a vector, to denote the magnitude the player should move in a particular direction.
-Time.deletaTime is the completion time in seconds since the last frame.
+Time.deletaTime is the completion time in seconds since the last frame.\cite{b2}
 It is used to keep the movement of the character frame independent and instead time dependent.
 The reason this occurs is because the time in between frames is not always constant.
 
